# github_pr_tracker

./: .env.example  .gitignore  README.md  config.example.yml  pyproject.toml
app/: config.py  config_loader.py  db.py  github_client.py  jira_client.py  jira_transitions.py  main.py  polling.py
app/templates/: _pr_table.html  base.html  index.html
docs/: jira_transitions.md  jira_workflow_transitions.yml
tests/: test_github_client.py
